# embar

./: .gitignore  404.html  AGENTS.md  README.md  TODO.md  conftest.py  docker-compose.yml  error-ignores.md  index.html  mkdocs.yml  objects.inv  public-type-issues.md  pyproject.toml  sitemap.xml  sqldef-prebuilt-plan.md  type-errors.md
.github/workflows/: docs.yml  test.yml
contributing/: index.html
docs/: no-pydantic.md  postgres-quickstart.md
docs/extensions/: vector.md
docs/integration/: connection-pool.md
docs/query/: delete.md  insert.md  joins.md  raw-sql.md  select.md  transactions.md  update.md  where.md
docs/schemas/: basics.md  constraints.md  data-types-pg.md  data-types-sqlite.md  relations.md
example/: main.py  schema.py
example/app/: app.py  schema.py
extensions/vector/: index.html
integration/connection-pool/: index.html
migrations/: index.html
no-pydantic/: index.html
postgres-quickstart/: index.html
query/delete/: index.html
query/insert/: index.html
query/joins/: index.html
query/raw-sql/: index.html
query/select/: index.html
query/transactions/: index.html
query/update/: index.html
query/where/: index.html
quickstart/: index.html
reference/SUMMARY/: index.html
reference/embar/: index.html
reference/embar/column/: index.html
reference/embar/column/base/: index.html
reference/embar/column/common/: index.html
reference/embar/column/pg/: index.html
reference/embar/column/sqlite/: index.html
reference/embar/config/: index.html
reference/embar/constraint/: index.html
reference/embar/constraint_base/: index.html
reference/embar/custom_types/: index.html
reference/embar/db/: index.html
reference/embar/db/_util/: index.html
reference/embar/db/base/: index.html
reference/embar/db/pg/: index.html
reference/embar/db/sqlite/: index.html
reference/embar/migration/: index.html
reference/embar/model/: index.html
reference/embar/query/: index.html
reference/embar/query/clause_base/: index.html
reference/embar/query/conflict/: index.html
reference/embar/query/delete/: index.html
reference/embar/query/fns/: index.html
reference/embar/query/group_by/: index.html
reference/embar/query/having/: index.html
reference/embar/query/insert/: index.html
reference/embar/query/join/: index.html
reference/embar/query/many/: index.html
reference/embar/query/order_by/: index.html
reference/embar/query/query/: index.html
reference/embar/query/select/: index.html
reference/embar/query/update/: index.html
reference/embar/query/vector/: index.html
reference/embar/query/where/: index.html
reference/embar/sql/: index.html
reference/embar/sql_db/: index.html
reference/embar/table/: index.html
reference/embar/table_base/: index.html
reference/embar/tools/: index.html
reference/embar/tools/commands/: index.html
reference/embar/tools/fmt/: index.html
reference/embar/tools/llm/: index.html
reference/embar/tools/migrate/: index.html
reference/embar/tools/models/: index.html
reference/embar/tools/utils/: index.html
schemas/basics/: index.html
schemas/constraints/: index.html
schemas/data-types-pg/: index.html
schemas/data-types-sqlite/: index.html
schemas/relations/: index.html
scripts/: gen-index-quickstart.py  gen_ref_pages.py
search/: search_index.json
src/embar/: _util.py  config.py  constraint.py  custom_types.py  migration.py  model.py  sql.py  sql_db.py  table.py  table_base.py
src/embar/column/: base.py  common.py  pg.py  sqlite.py
src/embar/db/: _util.py  base.py  pg.py  sqlite.py
src/embar/query/: delete.py  fromm.py  group_by.py  insert.py  join.py  many.py  order_by.py  query.py  select.py  selection.py  update.py  where.py
src/embar/tools/: commands.py  fmt.py  migrate.py  models.py  utils.py
src/pudl/: _util.py  column.py  column_base.py  db.py  group_by.py  join.py  main.py  query.py  selection.py  sql.py  table.py  table_base.py  types.py  where.py
src/pudl/column/: base.py  common.py  pg.py  sqlite.py
src/pudl/db/: base.py  pg.py  sqlite.py
src/pudl/query/: fromm.py  group_by.py  insert.py  join.py  many.py  select.py  selection.py  where.py
tests/: conftest.py  test_column_concord.py  test_plain_models.py  test_select_clauses.py  test_types.py  test_vector.py
tests/e2e/: conftest.py  container.py  migrations_schema.py  models.py  schema.py  test_insert.py  test_migrations.py  test_postgres.py  test_queries.py  test_returning.py  test_select.py  test_sync_async.py  test_update.py
tests/schemas/: schema.py
types/: index.html
