[tool.poe.tasks]
# run with eg `uv run poe fmt`
fmt = "ruff format"
lint = "ruff check --fix"
check = "basedpyright"

test.cmd = "uv run python -m example.main"
test.envfile = ".env"

# run all the above
all = [ {ref="fmt"}, {ref="lint"}, {ref="check"}, {ref="test"} ]

"ci:fmt" = "ruff format --check"  # fail if not formatted
"ci:lint" = "ruff check"

[project]
name = "pudl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Arderne", email = "chris@rdrn.me" }
]
requires-python = ">=3.14"
dependencies = [
    "dacite>=1.9.2",
    "psycopg[binary]>=3.2.11",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.7",
    "poethepoet>=0.37.0",
    "ruff>=0.14.1",
    "ty>=0.0.1a23",
    "vulture>=2.14",
]

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 120  # use whatever number makes you happy

[tool.ruff.lint]

[tool.pyright]
venvPath = "."
venv = ".venv"
strict = ["**/*.py"]
pythonVersion = "3.14"
reportExplicitAny = false
reportUnusedCallResult = false
reportAny = false
